[gd_scene load_steps=2 format=3 uid="uid://bcb4n73gwln62"]

[ext_resource type="Script" uid="uid://3kf1pbvvvg5h" path="res://scripts/ui/map_vote_popup.gd" id="1_yhnm7"]

[node name="MapVotePopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_yhnm7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.5
offset_right = 202.5
offset_bottom = 275.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="map_vote_status_label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAYER wants to start MAP"

[node name="timer_label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 32
text = "TIME"

[node name="join_box" type="HBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 24

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/join_box"]
layout_mode = 2
text = "Join?"

[node name="button_no" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/join_box"]
unique_name_in_owner = true
layout_mode = 2
text = "No"

[node name="button_yes" type="Button" parent="PanelContainer/MarginContainer/HBoxContainer/VBoxContainer/join_box"]
unique_name_in_owner = true
layout_mode = 2
text = "Yes"

[node name="VSeparator" type="VSeparator" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="vote_results" type="VBoxContainer" parent="PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
